--- a/index.html
+++ b/index.html
@@ -22,44 +22,42 @@
   </head>
 
   <body>
-    <div class="flex-main">
-      <div class="main-container">
-        <div class="image-container">
-          <img
-            src="images/image-header-desktop.jpg"
-            alt="An image of the office environment"
-            class="desktop-image image" />
-          <img
-            src="images/image-header-mobile.jpg"
-            alt="An image of the office environment"
-            class="mobile-image image" />
-        </div>
-        <div class="content">
-          <h1 class="heading">
-            Get <span class="insights">insights</span> that help your business
-            grow.
-          </h1>
-          <p class="paragraph">
-            Discover the benefits of data analytics and make better decisions
-            regarding revenue, customer experience, and overall efficiency.
-          </p>
-          <ul class="list">
-            <li class="list-item">
-              <p class="list-numbers">10k+</p>
-              <p class="list-text">COMPANIES</p>
-            </li>
-            <li class="list-item">
-              <p class="list-numbers">314</p>
-              <p class="list-text">TEMPLATES</p>
-            </li>
-            <li class="list-item">
-              <p class="list-numbers">12M+</p>
-              <p class="list-text">QUERIES</p>
-            </li>
-          </ul>
-        </div>
+    <main class="main-container">
+      <div class="image-container">
+        <img
+          src="images/image-header-desktop.jpg"
+          alt="An image of the office environment"
+          class="desktop-image image" />
+        <img
+          src="images/image-header-mobile.jpg"
+          alt="An image of the office environment"
+          class="mobile-image image" />
       </div>
-    </div>
+      <div class="content">
+        <h1 class="heading">
+          Get <span class="insights">insights</span> that help your business
+          grow.
+        </h1>
+        <p class="paragraph">
+          Discover the benefits of data analytics and make better decisions
+          regarding revenue, customer experience, and overall efficiency.
+        </p>
+        <ul class="list">
+          <li class="list-item">
+            <p class="list-numbers">10k+</p>
+            <p class="list-text">COMPANIES</p>
+          </li>
+          <li class="list-item">
+            <p class="list-numbers">314</p>
+            <p class="list-text">TEMPLATES</p>
+          </li>
+          <li class="list-item">
+            <p class="list-numbers">12M+</p>
+            <p class="list-text">QUERIES</p>
+          </li>
+        </ul>
+      </div>
+    </main>
 
     <div class="attribution">
       Challenge by
