Fixed overlay line for the main image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
   <body>
     <div class="main-container">
-      <div class="image-container">
+      <div class="img-container">
+      <div class="overlay"></div>
         <img
           src="images/image-header-desktop.jpg"
           alt="An image of the office environment"
